--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,17 @@
 <resources>
     <string name="app_name">Moravian Daily Texts</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="daily_text">Daily Text Goes Here</string>
     <string name="action_settings">Settings</string>
+    <string name="set">Set</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="notify_preferences_group">Notifications</string>
+
+    <string name="notify_checkbox_key">notify_checkbox_key</string>
+    <string name="notify_preferences_title">Receive Notifications</string>
+    <string name="notify_preferences_summary">Receive updates for new Daily Texts</string>
+
+    <string name="notify_time_key">notify_time_key</string>
+    <string name="notify_time_title">Time</string>
+    <string name="notify_time_summary">Set time of notification</string>
 </resources>
